--- a/Practo.html/Branches.html
+++ b/Practo.html/Branches.html
@@ -7,6 +7,14 @@
 <header>
     <center><img src="C:\Users\Nagendra\OneDrive\Desktop\HTML programs\practo1img.png"></center>
     <p align="center">
+        <a href="dregister.html">Doctor signup</a>
+        |
+        <a href="dlogin.html">Doctor Signin</a>
+        |
+        <a href="pregister.html">Patient Signup</a>
+        |
+        <a href="plogin.html">Patient Signin</a>
+        |
         <a href="home.html">Home</a>
         |
         <a href="Doctors.html">Doctors</a>
